@@ -3,6 +3,7 @@
 gparted.desktop.in
 src/Dialog_About.cc
 src/Dialog_Base_Partition.cc
+src/Dialog_Disklabel.cc
 src/Dialog_Partition_Copy.cc
 src/Dialog_Partition_Info.cc
 src/Dialog_Partition_New.cc
