@@ -1,3 +1,10 @@
+2004-11-28 Bart Hakvoort  <gparted@users.sf.net>
+
+	* Harddisks without disklabel are now properly initizalized and shown in the menu. When one tries to create a new partition on
+	  such a disk a dialog pops up with some blabla about disklabels and offers to create a disklabel. sweet :P (special thanks to mantiena-baltix 
+	  for bringing this issue to my attention)
+	* fixed minor annoyance with refreshing detailed deviceinfo after a 'deep refresh'
+
 2004-11-24 Bart Hakvoort  <gparted@users.sf.net>
 
 	* src/Dialog_Partition_Resize_Move.cc: fixed small bug with resizing and lower limits.
